--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,10 +8,11 @@ html {
 
 body {
     font-size: 1.6rem; // 16px
+    font-weight: $font-normal;
     width: 100%;
     height: 100%;
-    color: var(--text-primary, #{$dark});
-    background-color: var(--bg-primary, #{$white});
+    color: $text-primary;
+    background-color: $bg-primary;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -23,7 +24,7 @@ body {
 }
 
 li {
-    color: var(--text-primary, #{$dark});
+    color: $text-primary;
 }
 
 * {
