覆盖用户代理样式表

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,29 @@
+/* A simple CSS reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+
 html {
   font-size: 62.5%;
   -webkit-text-size-adjust: 100%;
